[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/EnemyView.gd" id="1"]

[node name="EnemyView" type="Control"]
layout_mode = 3
anchors_preset = 0
custom_minimum_size = Vector2(220, 140)
size_flags_horizontal = 3
mouse_filter = 0
script = ExtResource("1")

[node name="Sprite" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="Highlight" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 0, 0.25)

[node name="Info" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="NameLabel" type="Label" parent="Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemy Name"
horizontal_alignment = 1
clip_text = true

[node name="StatsRow" type="HBoxContainer" parent="Info"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="HPContainer" type="PanelContainer" parent="Info/StatsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HPBar" type="ProgressBar" parent="Info/StatsRow/HPContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_vertical = 4
step = 1.0
value = 50.0
show_percentage = false

[node name="HPLabel" type="Label" parent="Info/StatsRow/HPContainer/HPBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "50/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntentContainer" type="HBoxContainer" parent="Info/StatsRow"]
layout_mode = 2
alignment = 1

[node name="IntentIcon" type="TextureRect" parent="Info/StatsRow/IntentContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="IntentLabel" type="Label" parent="Info/StatsRow/IntentContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"

[node name="StatusContainer" type="HBoxContainer" parent="Info"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 4
